// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Logo/> properly with "big" props passed 1`] = `
<a
  aria-current="page"
  class="sc-gsTCUz biVMdF active"
  href="/"
  theme="[object Object]"
>
  <span
    class="sc-dlfnbm hdIZnM"
  >
    P
  </span>
  antry
</a>
`;

exports[`Render <Logo/> properly with default props with theme 1`] = `
<a
  aria-current="page"
  class="sc-gsTCUz dtOQGU active"
  href="/"
  theme="[object Object]"
>
  <span
    class="sc-dlfnbm ibcQvP"
  >
    P
  </span>
  antry
</a>
`;

exports[`Render <Logo/> properly with default props without provider 1`] = `
<a
  aria-current="page"
  class="sc-gsTCUz dtOQGU active"
  href="/"
  theme="[object Object]"
>
  <span
    class="sc-dlfnbm hdIZnM"
  >
    P
  </span>
  antry
</a>
`;
